--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -291,7 +291,92 @@
         <scene sceneID="Bg2-m7-A1k">
             <objects>
                 <viewController id="tQi-9N-xiF" userLabel="Schedule" customClass="ScheduleViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="IHA-3f-0u0"/>
+                        <viewControllerLayoutGuide type="bottom" id="MH8-nS-NaQ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Aca-zw-Tww">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IdS-ec-iYA">
+                                <rect key="frame" x="0.0" y="108" width="600" height="443"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="tQi-9N-xiF" id="RjO-tD-xPf"/>
+                                </connections>
+                            </tableView>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aX4-XN-Yb6" customClass="BLKFlexibleHeightBar">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <subviews>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q2e-tI-xRm">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="cQb-D2-Ouv"/>
+                                        </constraints>
+                                        <items>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="xBP-76-MSz"/>
+                                            <barButtonItem title="Item" id="pCR-oJ-1nt"/>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="sCq-Zo-kt4"/>
+                                        </items>
+                                    </toolbar>
+                                    <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bBI-oj-GSC">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="22"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="22" id="wcI-HE-quz"/>
+                                        </constraints>
+                                        <items>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="5Le-t2-USk"/>
+                                            <barButtonItem title="Item" id="uMV-FU-NQy"/>
+                                            <barButtonItem style="plain" systemItem="flexibleSpace" id="wF0-EW-EoK"/>
+                                        </items>
+                                    </toolbar>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="AEM-Jt-hBY"/>
+                                    <constraint firstAttribute="bottom" secondItem="bBI-oj-GSC" secondAttribute="bottom" id="KcT-LO-fXd"/>
+                                    <constraint firstAttribute="trailing" secondItem="bBI-oj-GSC" secondAttribute="trailing" id="RIU-lI-bAb"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="ULW-yR-s3P"/>
+                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="faV-Ac-51h"/>
+                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="nIn-Rt-duI"/>
+                                    <constraint firstAttribute="trailing" secondItem="Q2e-tI-xRm" secondAttribute="trailing" id="qyt-EI-cWE"/>
+                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="leading" secondItem="aX4-XN-Yb6" secondAttribute="leading" id="rIr-ez-qsn"/>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="44" id="scW-em-0yB"/>
+                                    <constraint firstAttribute="bottom" secondItem="Q2e-tI-xRm" secondAttribute="bottom" id="wGK-c3-h7p"/>
+                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="leading" secondItem="aX4-XN-Yb6" secondAttribute="leading" id="xzd-XC-R4B"/>
+                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="z3Q-p1-4Qt"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="AEM-Jt-hBY"/>
+                                        <exclude reference="wGK-c3-h7p"/>
+                                        <exclude reference="KcT-LO-fXd"/>
+                                        <exclude reference="nIn-Rt-duI"/>
+                                    </mask>
+                                </variation>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aX4-XN-Yb6" firstAttribute="top" secondItem="IHA-3f-0u0" secondAttribute="bottom" id="1sQ-MW-2FV"/>
+                            <constraint firstItem="IdS-ec-iYA" firstAttribute="leading" secondItem="Aca-zw-Tww" secondAttribute="leadingMargin" constant="-20" id="DnM-I2-JBn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="IdS-ec-iYA" secondAttribute="trailing" constant="-20" id="EA3-Py-0Gq"/>
+                            <constraint firstItem="IdS-ec-iYA" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="bottom" id="Fzz-hp-wYA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aX4-XN-Yb6" secondAttribute="trailing" constant="-20" id="Sdd-2d-k6E"/>
+                            <constraint firstItem="MH8-nS-NaQ" firstAttribute="top" secondItem="IdS-ec-iYA" secondAttribute="bottom" id="UmB-3E-voI"/>
+                            <constraint firstItem="aX4-XN-Yb6" firstAttribute="leading" secondItem="Aca-zw-Tww" secondAttribute="leadingMargin" constant="-20" id="adu-QO-vMn"/>
+                        </constraints>
+                    </view>
                     <tabBarItem key="tabBarItem" title="Schedule" image="icon_ios_topcharts.png" id="fpK-Dn-uGS"/>
+                    <connections>
+                        <outlet property="labelToolbar" destination="bBI-oj-GSC" id="btA-0I-XPS"/>
+                        <outlet property="labelToolbarItem" destination="uMV-FU-NQy" id="MwU-fr-maT"/>
+                        <outlet property="myBar" destination="aX4-XN-Yb6" id="fGK-iX-aUW"/>
+                        <outlet property="tableView" destination="IdS-ec-iYA" id="GPA-LW-6Xb"/>
+                        <outlet property="toolbar" destination="Q2e-tI-xRm" id="zIM-Ow-ND7"/>
+                        <outlet property="toolbarItem" destination="pCR-oJ-1nt" id="YgS-5m-7G0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3wG-Gg-XNc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
