--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -299,13 +299,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IdS-ec-iYA">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="tQi-9N-xiF" id="RjO-tD-xPf"/>
-                                </connections>
-                            </tableView>
                             <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aX4-XN-Yb6" customClass="BLKFlexibleHeightBar">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
                                 <subviews>
@@ -335,45 +328,34 @@
                                     </toolbar>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="AEM-Jt-hBY"/>
-                                    <constraint firstAttribute="bottom" secondItem="bBI-oj-GSC" secondAttribute="bottom" id="KcT-LO-fXd"/>
-                                    <constraint firstAttribute="trailing" secondItem="bBI-oj-GSC" secondAttribute="trailing" id="RIU-lI-bAb"/>
+                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="centerX" secondItem="aX4-XN-Yb6" secondAttribute="centerX" id="4Co-8V-W7A"/>
+                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="centerX" secondItem="aX4-XN-Yb6" secondAttribute="centerX" id="9Lf-Q4-f0L"/>
+                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="width" secondItem="aX4-XN-Yb6" secondAttribute="width" id="DDK-V6-kdA"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="22" id="ULW-yR-s3P"/>
                                     <constraint firstItem="Q2e-tI-xRm" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="faV-Ac-51h"/>
-                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="nIn-Rt-duI"/>
-                                    <constraint firstAttribute="trailing" secondItem="Q2e-tI-xRm" secondAttribute="trailing" id="qyt-EI-cWE"/>
-                                    <constraint firstItem="bBI-oj-GSC" firstAttribute="leading" secondItem="aX4-XN-Yb6" secondAttribute="leading" id="rIr-ez-qsn"/>
                                     <constraint firstAttribute="height" relation="lessThanOrEqual" constant="44" id="scW-em-0yB"/>
-                                    <constraint firstAttribute="bottom" secondItem="Q2e-tI-xRm" secondAttribute="bottom" id="wGK-c3-h7p"/>
-                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="leading" secondItem="aX4-XN-Yb6" secondAttribute="leading" id="xzd-XC-R4B"/>
+                                    <constraint firstItem="Q2e-tI-xRm" firstAttribute="width" secondItem="aX4-XN-Yb6" secondAttribute="width" id="tG1-hn-L6B"/>
                                     <constraint firstItem="bBI-oj-GSC" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="top" id="z3Q-p1-4Qt"/>
                                 </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="AEM-Jt-hBY"/>
-                                        <exclude reference="wGK-c3-h7p"/>
-                                        <exclude reference="KcT-LO-fXd"/>
-                                        <exclude reference="nIn-Rt-duI"/>
-                                    </mask>
-                                </variation>
                             </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="IdS-ec-iYA">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="tQi-9N-xiF" id="RjO-tD-xPf"/>
+                                </connections>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="aX4-XN-Yb6" firstAttribute="top" secondItem="IHA-3f-0u0" secondAttribute="bottom" id="1sQ-MW-2FV"/>
-                            <constraint firstItem="IdS-ec-iYA" firstAttribute="leading" secondItem="Aca-zw-Tww" secondAttribute="leading" id="DnM-I2-JBn"/>
-                            <constraint firstAttribute="trailing" secondItem="IdS-ec-iYA" secondAttribute="trailing" id="EA3-Py-0Gq"/>
-                            <constraint firstItem="IdS-ec-iYA" firstAttribute="top" secondItem="aX4-XN-Yb6" secondAttribute="bottom" id="Fzz-hp-wYA"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="aX4-XN-Yb6" secondAttribute="trailing" constant="-20" id="Sdd-2d-k6E"/>
-                            <constraint firstItem="MH8-nS-NaQ" firstAttribute="top" secondItem="IdS-ec-iYA" secondAttribute="bottom" constant="-49" id="UmB-3E-voI"/>
-                            <constraint firstItem="aX4-XN-Yb6" firstAttribute="leading" secondItem="Aca-zw-Tww" secondAttribute="leadingMargin" constant="-20" id="adu-QO-vMn"/>
-                            <constraint firstItem="IdS-ec-iYA" firstAttribute="top" secondItem="IHA-3f-0u0" secondAttribute="bottom" constant="-64" id="nNK-uq-Hb1"/>
+                            <constraint firstItem="aX4-XN-Yb6" firstAttribute="centerX" secondItem="Aca-zw-Tww" secondAttribute="centerX" id="2hQ-QR-GIO"/>
+                            <constraint firstItem="aX4-XN-Yb6" firstAttribute="width" secondItem="Aca-zw-Tww" secondAttribute="width" id="9QF-UQ-unR"/>
+                            <constraint firstItem="IdS-ec-iYA" firstAttribute="height" secondItem="Aca-zw-Tww" secondAttribute="height" id="9im-Yn-VrJ"/>
+                            <constraint firstItem="IdS-ec-iYA" firstAttribute="centerX" secondItem="Aca-zw-Tww" secondAttribute="centerX" id="D2N-Ba-ycK"/>
+                            <constraint firstItem="IdS-ec-iYA" firstAttribute="width" secondItem="Aca-zw-Tww" secondAttribute="width" id="LTT-5D-9OI"/>
+                            <constraint firstItem="IdS-ec-iYA" firstAttribute="centerY" secondItem="Aca-zw-Tww" secondAttribute="centerY" id="W2G-6w-45n"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="Fzz-hp-wYA"/>
-                            </mask>
-                        </variation>
                     </view>
                     <tabBarItem key="tabBarItem" title="Schedule" image="icon_ios_topcharts.png" id="fpK-Dn-uGS"/>
                     <connections>
