--- a/CCIP/CCIP/Base.lproj/Main.storyboard
+++ b/CCIP/CCIP/Base.lproj/Main.storyboard
@@ -778,35 +778,48 @@ Please copy and paste the token into next field or click the token link in the r
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Abstract" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFm-dm-IE3">
-                                            <rect key="frame" x="18" y="33" width="378" height="21"/>
+                                        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xIH-lT-Tjq">
+                                            <rect key="frame" x="31" y="18" width="352" height="213.66666666666666"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Abstract" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TFm-dm-IE3">
+                                                    <rect key="frame" x="22" y="28" width="308" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="4tr-rr-GbX"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.60392156860000001" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Djc-Wg-p3M">
+                                                    <rect key="frame" x="22" y="60" width="308" height="125.66666666666666"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="H3y-UP-jt3"/>
+                                                <constraint firstItem="TFm-dm-IE3" firstAttribute="leading" secondItem="xIH-lT-Tjq" secondAttribute="leading" constant="22" id="63l-dk-yuh"/>
+                                                <constraint firstItem="Djc-Wg-p3M" firstAttribute="centerX" secondItem="TFm-dm-IE3" secondAttribute="centerX" id="7Rp-hX-GbV"/>
+                                                <constraint firstItem="Djc-Wg-p3M" firstAttribute="width" secondItem="TFm-dm-IE3" secondAttribute="width" id="DaP-h0-SNR"/>
+                                                <constraint firstItem="Djc-Wg-p3M" firstAttribute="top" secondItem="TFm-dm-IE3" secondAttribute="bottom" constant="11" id="NOO-dc-vd6"/>
+                                                <constraint firstAttribute="bottom" secondItem="Djc-Wg-p3M" secondAttribute="bottom" constant="28" id="VBV-ji-fK8"/>
+                                                <constraint firstAttribute="trailing" secondItem="TFm-dm-IE3" secondAttribute="trailing" constant="22" id="wHm-kv-pYb"/>
+                                                <constraint firstItem="TFm-dm-IE3" firstAttribute="top" secondItem="xIH-lT-Tjq" secondAttribute="top" constant="28" id="xV9-3A-heh"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
-                                            <color key="textColor" red="0.0" green="0.60392156860000001" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Djc-Wg-p3M">
-                                            <rect key="frame" x="18" y="61.999999999999986" width="378" height="177.66666666666663"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottom" secondItem="Djc-Wg-p3M" secondAttribute="bottom" constant="10" id="S3y-cV-JPW"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="TFm-dm-IE3" secondAttribute="trailing" constant="10" id="XfQ-G6-rQ9"/>
-                                        <constraint firstItem="TFm-dm-IE3" firstAttribute="leading" secondItem="gnT-1d-Gea" secondAttribute="leadingMargin" constant="10" id="amb-aN-c6e"/>
-                                        <constraint firstItem="TFm-dm-IE3" firstAttribute="top" secondItem="gnT-1d-Gea" secondAttribute="topMargin" constant="25" id="awn-VZ-M6x"/>
-                                        <constraint firstItem="Djc-Wg-p3M" firstAttribute="width" secondItem="TFm-dm-IE3" secondAttribute="width" id="fll-d3-XRF"/>
-                                        <constraint firstItem="Djc-Wg-p3M" firstAttribute="top" secondItem="TFm-dm-IE3" secondAttribute="bottom" constant="8" id="led-nM-5Qw"/>
-                                        <constraint firstItem="Djc-Wg-p3M" firstAttribute="centerX" secondItem="gnT-1d-Gea" secondAttribute="centerX" id="yKW-2k-aJW"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="xIH-lT-Tjq" secondAttribute="bottom" constant="10" id="9T7-gy-p1k"/>
+                                        <constraint firstItem="xIH-lT-Tjq" firstAttribute="top" secondItem="gnT-1d-Gea" secondAttribute="topMargin" constant="10" id="eBc-v6-8bg"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="xIH-lT-Tjq" secondAttribute="trailing" constant="23" id="fKJ-cM-M8t"/>
+                                        <constraint firstItem="xIH-lT-Tjq" firstAttribute="leading" secondItem="gnT-1d-Gea" secondAttribute="leadingMargin" constant="23" id="wXN-9U-foe"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="lbAbstractContent" destination="Djc-Wg-p3M" id="BPZ-1I-LYa"/>
                                     <outlet property="lbAbstractText" destination="TFm-dm-IE3" id="co8-af-gSJ"/>
+                                    <outlet property="vwContent" destination="xIH-lT-Tjq" id="ZVz-g2-WQJ"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ScheduleSpeakerInfo" rowHeight="250" id="DvY-IR-Yow" customClass="ScheduleSpeakerInfoViewCell">
@@ -816,35 +829,48 @@ Please copy and paste the token into next field or click the token link in the r
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="249.66666666666666"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speaker Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVW-s6-Qce">
-                                            <rect key="frame" x="18" y="33" width="378" height="21"/>
+                                        <view contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VwH-sZ-Ar0">
+                                            <rect key="frame" x="31" y="18" width="352" height="213.66666666666666"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Speaker Info" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IVW-s6-Qce">
+                                                    <rect key="frame" x="22" y="28" width="308" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="21" id="oxM-3c-TgG"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
+                                                    <color key="textColor" red="0.0" green="0.60392156860000001" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MtK-XE-7x7">
+                                                    <rect key="frame" x="22" y="60" width="308" height="125.66666666666666"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="21" id="oxM-3c-TgG"/>
+                                                <constraint firstItem="IVW-s6-Qce" firstAttribute="top" secondItem="VwH-sZ-Ar0" secondAttribute="top" constant="28" id="0eG-Fo-Ocb"/>
+                                                <constraint firstItem="MtK-XE-7x7" firstAttribute="width" secondItem="IVW-s6-Qce" secondAttribute="width" id="3Ch-OF-jNX"/>
+                                                <constraint firstItem="MtK-XE-7x7" firstAttribute="top" secondItem="IVW-s6-Qce" secondAttribute="bottom" constant="11" id="8S9-w4-4uA"/>
+                                                <constraint firstItem="MtK-XE-7x7" firstAttribute="centerX" secondItem="IVW-s6-Qce" secondAttribute="centerX" id="K9u-zS-h1C"/>
+                                                <constraint firstItem="IVW-s6-Qce" firstAttribute="leading" secondItem="VwH-sZ-Ar0" secondAttribute="leading" constant="22" id="Qhf-EO-Vfs"/>
+                                                <constraint firstAttribute="trailing" secondItem="IVW-s6-Qce" secondAttribute="trailing" constant="22" id="shm-rH-sCc"/>
+                                                <constraint firstAttribute="bottom" secondItem="MtK-XE-7x7" secondAttribute="bottom" constant="28" id="uwC-Ch-ID6"/>
                                             </constraints>
-                                            <fontDescription key="fontDescription" name="PingFangTC-Regular" family="PingFang TC" pointSize="20"/>
-                                            <color key="textColor" red="0.0" green="0.60392156860000001" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="clip" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MtK-XE-7x7">
-                                            <rect key="frame" x="18" y="61.999999999999986" width="378" height="177.66666666666663"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
+                                        </view>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="MtK-XE-7x7" firstAttribute="centerX" secondItem="rDn-ET-W12" secondAttribute="centerX" id="0II-ty-zwL"/>
-                                        <constraint firstItem="MtK-XE-7x7" firstAttribute="top" secondItem="IVW-s6-Qce" secondAttribute="bottom" constant="8" id="UdA-xb-R9h"/>
-                                        <constraint firstItem="MtK-XE-7x7" firstAttribute="width" secondItem="IVW-s6-Qce" secondAttribute="width" id="Ugt-1G-UwR"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="IVW-s6-Qce" secondAttribute="trailing" constant="10" id="Wv9-gK-YgM"/>
-                                        <constraint firstItem="IVW-s6-Qce" firstAttribute="leading" secondItem="rDn-ET-W12" secondAttribute="leadingMargin" constant="10" id="cNa-zh-KfA"/>
-                                        <constraint firstItem="IVW-s6-Qce" firstAttribute="top" secondItem="rDn-ET-W12" secondAttribute="topMargin" constant="25" id="hJ8-s3-FM3"/>
-                                        <constraint firstAttribute="bottom" secondItem="MtK-XE-7x7" secondAttribute="bottom" constant="10" id="jCO-EV-P5d"/>
+                                        <constraint firstItem="VwH-sZ-Ar0" firstAttribute="leading" secondItem="rDn-ET-W12" secondAttribute="leadingMargin" constant="23" id="2jM-yY-oIR"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="VwH-sZ-Ar0" secondAttribute="bottom" constant="10" id="Bcd-3L-IIc"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="VwH-sZ-Ar0" secondAttribute="trailing" constant="23" id="ObR-q7-8AK"/>
+                                        <constraint firstItem="VwH-sZ-Ar0" firstAttribute="top" secondItem="rDn-ET-W12" secondAttribute="topMargin" constant="10" id="b78-gG-a6d"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="lbSpeakerInfoContent" destination="MtK-XE-7x7" id="XwQ-Ia-jlX"/>
                                     <outlet property="lbSpeakerInfoTitle" destination="IVW-s6-Qce" id="ndW-BH-lYN"/>
+                                    <outlet property="vwContent" destination="VwH-sZ-Ar0" id="xqR-lm-5sl"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
